# mlx-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: autodiff.rs  basic_arrays.rs  bert.rs  clip.rs  gpt2.rs  llama.rs  neural_network.rs  optimizer.rs  scheduler.rs  serialization.rs  vit.rs  whisper.rs
src/: array.rs  device.rs  dtype.rs  error.rs  lib.rs  linalg.rs  nn.rs  ops.rs  random.rs  scheduler.rs  serialize.rs  stream.rs  transforms.rs
