[package]
name = "mlx-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe, idiomatic Rust bindings for Apple MLX framework"

[dependencies]
mlx-sys = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
approx = "0.5"

[features]
default = []
metal = ["mlx-sys/metal"]
cpu-only = ["mlx-sys/cpu-only"]
