[package]
name = "mlx-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe, idiomatic Rust bindings for Apple MLX framework"

[dependencies]
mlx-sys = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
safetensors = { workspace = true }
byteorder = { workspace = true }
memmap2 = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
approx = "0.5"

[features]
default = []
metal = ["mlx-sys/metal"]
cpu-only = ["mlx-sys/cpu-only"]

[[example]]
name = "basic_arrays"
path = "examples/basic_arrays.rs"

[[example]]
name = "neural_network"
path = "examples/neural_network.rs"

[[example]]
name = "autodiff"
path = "examples/autodiff.rs"

[[example]]
name = "optimizer"
path = "examples/optimizer.rs"

[[example]]
name = "llama"
path = "examples/llama.rs"

[[example]]
name = "serialization"
path = "examples/serialization.rs"

[[example]]
name = "scheduler"
path = "examples/scheduler.rs"

[[example]]
name = "bert"
path = "examples/bert.rs"

[[example]]
name = "vit"
path = "examples/vit.rs"

[[example]]
name = "whisper"
path = "examples/whisper.rs"

[[example]]
name = "gpt2"
path = "examples/gpt2.rs"
